--- a/Exercises/01_Count-With-Python-Exercises/01_Pythagorean-Theorem.ipynb
+++ b/Exercises/01_Count-With-Python-Exercises/01_Pythagorean-Theorem.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.0\n"
+      "5.0\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
     "\n",
     "hypothenuse = math.sqrt(cathetus_a**2 + cathetus_b**2)\n",
     "\n",
-    "print(Hypothenuse)"
+    "print(hypothenuse)"
    ]
   },
   {
