--- a/Exercises/01_Count-With-Python-Exercises/02_03_Classification-Accuracy.ipynb
+++ b/Exercises/01_Count-With-Python-Exercises/02_03_Classification-Accuracy.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -103,17 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The accuracy of the model is high, but I see a few problem:\n",
+    "#### The accuracy of the model is high, but I see a few problems:\n",
     "\n",
-    "* The accuracy is so high is because the number of fires is so small in comparison with the number of no fires. \n",
+    "* The accuracy is so high because the number of fires is so small in comparison with the number of no fires. \n",
     "* The results aren't nearly as good as the accuracy formula indicates. There were 13 fires in total, but the model only predicted 2 of them. In contrast, it was able to predict 985 out of 987 no fires.\n",
     "* Since the model's primary purpose is to detect fires, I'd say it's quite bad. Then again, predicting 2 fires means that there were 2 times where firemen had time to prepare, lowering the risk of injuries and the risk of fire spreading. \n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
