--- a/Exercises/04_For-Statements-Exercises/Multiplication Table.ipynb
+++ b/Exercises/04_For-Statements-Exercises/Multiplication Table.ipynb
@@ -59,7 +59,7 @@
     "for i in range(0, 11):\n",
     "    string_row = \"\"\n",
     "    for j in range(0,11):\n",
-    "        string_row += str(i) + \" \"\n",
+    "        string_row += str(i * j) + \" \"\n",
     "        j += 1\n",
     "    table += string_row + \"\\n\"\n",
     "print(table)"
