--- a/Code-Alongs/L013_Files.ipynb
+++ b/Code-Alongs/L013_Files.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Open file with *context management*"
+    "## Open file with context management"
    ]
   },
   {
