--- a/Code-Alongs/L013_Files.ipynb
+++ b/Code-Alongs/L013_Files.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- **.txt** - Plain english (or other language) text.\n",
     "- **.csv** - Comma Separated Values\n",
-    "- **.json**\n",
+    "- **.json** - Javascript-ish\n",
     "\n",
     "## File names and file paths\n",
     "\n",
@@ -250,6 +250,143 @@
     "\n",
     "for student in students:\n",
     "    print(student)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Json serialization and deserialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"firstname\": \"Fredrik\",\n",
+      "    \"lastname\": \"Johansson\",\n",
+      "    \"age\": 42,\n",
+      "    \"languages\": [\n",
+      "        \"Python\",\n",
+      "        \"C#\",\n",
+      "        \"Javascript\"\n",
+      "    ],\n",
+      "    \"contactinfo\": {\n",
+      "        \"phone\": \"0702345678\",\n",
+      "        \"email\": [\n",
+      "            \"fredrik@everyloop.com\",\n",
+      "            \"fredrik@gmail.com\",\n",
+      "            \"fredrik.johansson@hotmail.com\"\n",
+      "        ]\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "teacher = {\n",
+    "    \"firstname\": \"Fredrik\",\n",
+    "    \"lastname\": \"Johansson\",\n",
+    "    \"age\": 42,\n",
+    "    \"languages\": [\"Python\", \"C#\", \"Javascript\"],\n",
+    "    \"contactinfo\": {\n",
+    "        \"phone\": \"0702345678\",\n",
+    "        \"email\": [\"fredrik@everyloop.com\", \n",
+    "                  \"fredrik@gmail.com\", \n",
+    "                  \"fredrik.johansson@hotmail.com\"]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "serialized_data = json.dumps(teacher, indent = 4)\n",
+    "\n",
+    "# print(serialized_data)\n",
+    "\n",
+    "with open(\"..\\\\data\\\\teacher.json\", \"w\") as file:\n",
+    "    print(serialized_data)\n",
+    "    file.write(serialized_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"..\\\\data\\\\teacher.json\", \"r\") as file:\n",
+    "    data = file.read()\n",
+    "    \n",
+    "teacher = json.loads(data)\n",
+    "\n",
+    "print(type(teacher))\n",
+    "print(type(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alfa-romero\n",
+      "audi\n",
+      "bmw\n",
+      "chevrolet\n",
+      "dodge\n",
+      "honda\n",
+      "isuzu\n",
+      "jaguar\n",
+      "mazda\n",
+      "mercedes-benz\n",
+      "mercury\n",
+      "mitsubishi\n",
+      "nissan\n",
+      "peugot\n",
+      "plymouth\n",
+      "porsche\n",
+      "renault\n",
+      "saab\n",
+      "subaru\n",
+      "toyota\n",
+      "volkswagen\n",
+      "volvo\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"..\\\\data\\\\autos_json.json\", \"r\") as file:\n",
+    "    data = file.read()\n",
+    "    \n",
+    "cars = json.loads(data)\n",
+    "\n",
+    "#for key, value in cars[0].items():\n",
+    "    #print(f'{key} = {value}')\n",
+    "    \n",
+    "brands = set([car[\"make\"] for car in cars])\n",
+    "\n",
+    "#print()\n",
+    "\n",
+    "for brand in sorted(brands):\n",
+    "    print(brand)"
    ]
   }
  ],
