Labb 2 distance function

--- a/Labs/Labb-2-2023/Labb2.ipynb
+++ b/Labs/Labb-2-2023/Labb2.ipynb
@@ -155,8 +155,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "# Function to measure distance between points\n",
-    "# I use the Euclidean formula we used in an earlier exercise: d = sqrt((x2 - x1)^2 + (y2 - y1)^2)"
+    "# I use the Euclidean formula we used in an earlier exercise: distance = sqrt((x2 - x1)^2 + (y2 - y1)^2)\n",
+    "\n",
+    "def distance(point1, point2):\n",
+    "\n",
+    "    # Point 1\n",
+    "    x1 = point1[0]\n",
+    "    y1 = point1[1]\n",
+    "    \n",
+    "    # Point 2\n",
+    "    x2 = point2[0]\n",
+    "    y2 = point2[1]\n",
+    "\n",
+    "    # Distances\n",
+    "    distance_x = x1 - x2\n",
+    "    distance_y = y1 - y2\n",
+    "\n",
+    "    # Euclidean formula for distance\n",
+    "    distance = math.sqrt(distance_x**2 + distance_y**2)\n",
+    "\n",
+    "    return distance"
    ]
   }
  ],
