--- a/Labs/Labb-2-2023/Labb2.ipynb
+++ b/Labs/Labb-2-2023/Labb2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     "import matplotlib.pyplot as plt\n",
     "import csv\n",
     "\n",
-    "# 3 empty lists, one for for the pokemon's width, one for its length, and one list which indicates whether the Pokémon is a Pichu or a Pikachu (0 = Pichu, 1 = Pikachu)\n",
+    "# 3 empty lists, one for for the pokemon's width, one for its length, and one list that indicates whether the Pokémon is a Pichu or Pikachu (0 = Pichu, 1 = Pikachu)\n",
     "\n",
     "pokemon_width = []\n",
     "pokemon_length = []\n",
@@ -106,17 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(25.0, 32.0), (24.2, 31.5), (22.0, 34.0), (20.5, 34.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Here I create an empty list to store the test points once I've read them from the testpoints.txt file\n",
     "\n",
@@ -125,25 +117,25 @@
     "# Here I will read the testpoints.txt file\n",
     "\n",
     "with open(\"testpoints.txt\", \"r\") as file:\n",
-    "    # Here I skip the first line (\"Test points:\")\n",
+    "    # Skip the first line (\"Test points:\")\n",
     "    lines = file.readlines()[1:]\n",
     "    \n",
     "    for line in lines:\n",
-    "        # Here I remove the parentheses\n",
+    "        # Remove the parentheses\n",
     "        line = line.replace(\"(\", \"\").replace(\")\", \"\")\n",
     "        \n",
-    "        # Here I split the string by the comma\n",
+    "        # Split the string by the comma\n",
     "        split_line = line.split(\",\")\n",
     "        \n",
-    "        # Here I remove the numbering (\"1.\", \"2.\", \"3.\", and \"4.\")\n",
+    "        # Remove the numbering (\"1.\", \"2.\", \"3.\", and \"4.\")\n",
     "        x_string = split_line[0].split(\" \")[-1]\n",
     "        y_string = split_line[1]\n",
     "        \n",
-    "        # Here I convert the strings to floats\n",
+    "        # Convert the strings to floats\n",
     "        x = float(x_string)\n",
     "        y = float(y_string)\n",
     "        \n",
-    "        # Here I add the tuples to the list\n",
+    "        # Add the tuples to the list\n",
     "        test_points.append((x, y))\n",
     "        \n",
     "# print(test_points)"
@@ -151,26 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "# Function to measure distance between points\n",
-    "# I use the Euclidean formula we used in an earlier exercise: distance = sqrt((x2 - x1)^2 + (y2 - y1)^2)\n",
+    "# Here I create a function to measure distance between points\n",
+    "# I use the Euclidean formula we used in an earlier exercise: \n",
+    "# Distance = sqrt((x2 - x1)^2 + (y2 - y1)^2)\n",
     "\n",
-    "def distance(point1, point2):\n",
+    "def calculate_distance(point1, point2):\n",
     "\n",
-    "    # Point 1\n",
-    "    x1 = point1[0]\n",
-    "    y1 = point1[1]\n",
-    "    \n",
-    "    # Point 2\n",
-    "    x2 = point2[0]\n",
-    "    y2 = point2[1]\n",
+    "    # Point 1 & 2\n",
+    "    x1, y1 = point1[0], point1[1]\n",
+    "    x2, y2 = point2[0], point2[1]\n",
     "\n",
-    "    # Distances\n",
+    "    # Distance between point 1 & 2\n",
     "    distance_x = x1 - x2\n",
     "    distance_y = y1 - y2\n",
     "\n",
@@ -178,6 +167,189 @@
     "    distance = math.sqrt(distance_x**2 + distance_y**2)\n",
     "\n",
     "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample with (width, height): (25.0, 32.0) classified as Pikachu\n",
+      "Sample with (width, height): (24.2, 31.5) classified as Pikachu\n",
+      "Sample with (width, height): (22.0, 34.0) classified as Pikachu\n",
+      "Sample with (width, height): (20.5, 34.0) classified as Pichu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time for the fun part!\n",
+    "\n",
+    "# Empty lists where I will store the Pichu and Pikachu points\n",
+    "pichus = []\n",
+    "pikachus = []\n",
+    "\n",
+    "# len(pichu_width) to get the number of Pichus, append to list\n",
+    "for i in range(len(pichu_width)):\n",
+    "    pichus.append((pichu_width[i], pichu_length[i]))\n",
+    "\n",
+    "# len(pikachu_width) to get the number of Pikachus, append to list\n",
+    "for i in range(len(pikachu_width)):\n",
+    "    pikachus.append((pikachu_width[i], pikachu_length[i]))\n",
+    "    \n",
+    "# Sample 1:\n",
+    "for test_point in test_points:\n",
+    "    distances = []\n",
+    "    \n",
+    "    for pichu in pichus:\n",
+    "        pichu_distance = calculate_distance(test_point, pichu)\n",
+    "        distances.append((pichu_distance, \"Pichu\"))\n",
+    "    \n",
+    "    for pikachu in pikachus:\n",
+    "        pikachu_distance = calculate_distance(test_point, pikachu)\n",
+    "        distances.append((pikachu_distance, \"Pikachu\"))\n",
+    "    \n",
+    "    # Sort the list by distance (first element of each tuple)\n",
+    "    distances.sort()\n",
+    "    \n",
+    "    # The nearest point's Pokémon\n",
+    "    nearest_pokemon = distances[0]\n",
+    "    if nearest_pokemon[1] == \"Pichu\":\n",
+    "        nearest_pokemon = \"Pichu\"\n",
+    "    else:\n",
+    "        nearest_pokemon = \"Pikachu\"\n",
+    "    \n",
+    "    print(f'Sample with (width, height): {test_point} classified as {nearest_pokemon}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample with (width, height): (25.0, 25.0) classified as Pichu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uppgift 1 - Classify the user's Pokémon\n",
+    "\n",
+    "while True:\n",
+    "    user_input_width = input(\"Please enter the width of the pokemon:\")\n",
+    "    user_input_length = input(\"Please enter the length of the pokemon:\")\n",
+    "    \n",
+    "    try:\n",
+    "        user_width = float(user_input_width)\n",
+    "        user_length = float(user_input_length)\n",
+    "        \n",
+    "        if user_width < 0 or user_length < 0:\n",
+    "            print(\"Please enter positive numbers only.\")\n",
+    "        else:\n",
+    "            user_pokemon = user_width, user_length\n",
+    "            break\n",
+    "    except ValueError:\n",
+    "        print(\"Please enter numbers only.\")\n",
+    "\n",
+    "distances = []\n",
+    "    \n",
+    "for pichu in pichus:\n",
+    "    pichu_distance = calculate_distance(user_pokemon, pichu)\n",
+    "    distances.append((pichu_distance, \"Pichu\"))\n",
+    "    \n",
+    "for pikachu in pikachus:\n",
+    "    pikachu_distance = calculate_distance(user_pokemon, pikachu)\n",
+    "    distances.append((pikachu_distance, \"Pikachu\"))\n",
+    "    \n",
+    "# Sort the list by distance (first element of each tuple)\n",
+    "distances.sort()\n",
+    "    \n",
+    "# The nearest point's Pokémon\n",
+    "nearest_pokemon = distances[0]\n",
+    "\n",
+    "# Check which Pokémon is closer\n",
+    "if nearest_pokemon[1] == \"Pichu\":\n",
+    "    nearest_pokemon = \"Pichu\"\n",
+    "else:\n",
+    "    nearest_pokemon = \"Pikachu\"\n",
+    "    \n",
+    "print(f'Sample with (width, height): {user_pokemon} classified as {nearest_pokemon}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample with (width, height): (27.0, 33.0) classified as Pikachu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uppgift 2 - Classify the user's Pokémon, but with the 10 closest points\n",
+    "\n",
+    "while True:\n",
+    "    user_input_width = input(\"Please enter the width of the pokemon:\")\n",
+    "    user_input_length = input(\"Please enter the length of the pokemon:\")\n",
+    "    \n",
+    "    try:\n",
+    "        user_width = float(user_input_width)\n",
+    "        user_length = float(user_input_length)\n",
+    "        \n",
+    "        if user_width < 0 or user_length < 0:\n",
+    "            print(\"Please enter positive numbers only.\")\n",
+    "        else:\n",
+    "            user_pokemon = user_width, user_length\n",
+    "            break\n",
+    "    except ValueError:\n",
+    "        print(\"Please enter positive digits only.\")\n",
+    "\n",
+    "distances = []\n",
+    "    \n",
+    "for pichu in pichus:\n",
+    "    pichu_distance = calculate_distance(user_pokemon, pichu)\n",
+    "    distances.append((pichu_distance, \"Pichu\"))\n",
+    "    \n",
+    "for pikachu in pikachus:\n",
+    "    pikachu_distance = calculate_distance(user_pokemon, pikachu)\n",
+    "    distances.append((pikachu_distance, \"Pikachu\"))\n",
+    "    \n",
+    "# Sort the list by distance (first element of each tuple)\n",
+    "distances.sort()\n",
+    "    \n",
+    "# Empty lists where I will add how many pichus/pikachus are in the nearest 10\n",
+    "pichus_in_nearest_10 = 0\n",
+    "pikachus_in_nearest_10 = 0\n",
+    "\n",
+    "# Check which ones are nearest\n",
+    "for i in range(10):\n",
+    "    \n",
+    "    nearest_pokemon = distances[i]\n",
+    "    \n",
+    "    # Check which Pokémon is closer\n",
+    "    if nearest_pokemon[1] == \"Pichu\":\n",
+    "        nearest_pokemon = \"Pichu\"\n",
+    "        pichus_in_nearest_10 += 1\n",
+    "    else:\n",
+    "        nearest_pokemon = \"Pikachu\"\n",
+    "        pikachus_in_nearest_10 += 1\n",
+    "\n",
+    "# Print the classification\n",
+    "if pichus_in_nearest_10 > pikachus_in_nearest_10:\n",
+    "    print(f'Sample with (width, height): {user_pokemon} classified as Pichu')\n",
+    "else:\n",
+    "    print(f'Sample with (width, height): {user_pokemon} classified as Pikachu')\n"
    ]
   }
  ],
