Labb 2 updates + test

--- a/Labs/Labb-2-2023/Labb2.ipynb
+++ b/Labs/Labb-2-2023/Labb2.ipynb
@@ -228,19 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample with (width, height): (25.0, 25.0) classified as Pichu\n"
+      "Sample with (width, height): (23.7, 32.5) classified as Pichu\n"
      ]
     }
    ],
    "source": [
-    "# Uppgift 1 - Classify the user's Pokémon\n",
+    "# Uppgift 1 - Classify the user's Pokémon (nearest point only)\n",
     "\n",
     "while True:\n",
     "    user_input_width = input(\"Please enter the width of the pokemon:\")\n",
@@ -285,19 +285,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample with (width, height): (27.0, 33.0) classified as Pikachu\n"
+      "Sample with (width, height): (23.7, 32.5) classified as Pikachu\n"
      ]
     }
    ],
    "source": [
-    "# Uppgift 2 - Classify the user's Pokémon, but with the 10 closest points\n",
+    "# Uppgift 2 - Classify the user's Pokémon (with the 10 nearest points)\n",
     "\n",
     "while True:\n",
     "    user_input_width = input(\"Please enter the width of the pokemon:\")\n",
@@ -350,6 +350,22 @@
     "    print(f'Sample with (width, height): {user_pokemon} classified as Pichu')\n",
     "else:\n",
     "    print(f'Sample with (width, height): {user_pokemon} classified as Pikachu')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To determine if the new algorithm worked I tried to find a point which was closer to a Pichu, but more likely to be a Pikachu. In the dataset there's a Pichu with the dimensions:\n",
+    "\n",
+    "- 23.6967469082275, 32.52744160379351 - approximately (23.7, 32.5)\n",
+    "\n",
+    "This is an outlier, a statistically unlikely size for a Pichu in this dataset (see the scatter plot). \n",
+    "\n",
+    "- With only one point, the algorithm classified (23.7, 32.5) as **Pichu**\n",
+    "- With the 10 nearest points it classified (23.7, 32.5) as **Pikachu**. \n",
+    "\n",
+    "### **Mission Accomplished!**"
    ]
   }
  ],
