--- a/Labs/Labb-2-2023/Labb2.ipynb
+++ b/Labs/Labb-2-2023/Labb2.ipynb
@@ -392,26 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Pichus in the new training set = 50\n",
-      "Number of Pichus in the new test set = 25\n",
-      "All Pichus are included in the new datasets.\n",
-      "\n",
-      "Number of Pikachus in the new training set = 50\n",
-      "Number of Pikachus in the new test set = 25\n",
-      "All Pikachus are included in the new datasets.\n",
-      "\n",
-      "[(23.22258522384455, 30.98700760873653), (16.866105280907732, 28.984730409305136), (17.714056417303343, 31.44170391314962), (20.1569063412357, 31.639314277796213), (22.30210323807139, 32.73237945145149), (23.6967469082275, 32.52744160379351), (17.672876665469843, 32.67247775608707), (20.795121649361587, 32.493051910886486), (20.411629224757448, 32.263992292489995), (19.55060327163345, 34.602756266320824), (20.323269906838078, 32.29574812465895), (19.615470460641276, 31.431998074581394), (18.659636883604406, 33.04492931889734), (18.59843317023302, 32.60944545701523), (20.118681851201636, 31.89116680793916), (19.213188999276543, 31.71415755285442), (19.499062316347583, 31.139578977011656), (20.282109030336354, 33.18796105898338), (20.008781128403864, 32.15292152986537), (21.19030359241021, 35.40347944144049), (21.959384499160468, 31.23956701424158), (19.510846016895872, 29.897476657136767), (21.35018601896744, 33.94708664610186), (20.579090632339703, 30.771060416224586), (21.762001750531006, 33.05861298355044), (20.860495554922544, 29.030638237258632), (18.310337204918557, 32.21783772801109), (20.23890182459327, 32.78945132868386), (20.286130095999752, 32.05337469378953), (18.583516818010633, 31.317010181098944), (19.574019952530243, 31.935886159584427), (20.101930916301317, 31.19190374413498), (19.69944356712352, 30.714803909172808), (21.457545842765146, 31.659809960209728), (19.63004376836659, 33.17007380684688), (19.64717255190365, 32.82976709158487), (19.209914415003638, 31.420355685575746), (23.213535136458052, 30.885396636777646), (18.341233265627693, 31.399261188293124), (20.670175582205307, 32.56517816055985), (19.639358214988224, 34.56117030001663), (20.39204407747099, 32.08774193592624), (18.16229126686346, 29.93643755301725), (19.120619567709372, 30.699542112256864), (19.245073847748515, 32.58876412530819), (21.07884990354048, 32.02998372994636), (19.689909518113225, 31.931042667213433), (19.893039297257797, 30.792717627266093), (20.276898330625336, 33.84658247356705), (18.990689973799388, 32.387963045016726)]\n",
-      "[(24.609041154081922, 36.104823979389685), (24.004087953898246, 35.618803262029324), (21.78020031891186, 33.213397759738264), (23.792145242488125, 35.107650004447365), (22.15365577923418, 37.131777154514445), (23.114574183632723, 35.530813208835745), (24.47796159427686, 35.32146634770389), (23.631672104136165, 34.52980905331491), (25.102866296361412, 33.30022994232253), (22.69081372502663, 35.561787418827784), (23.79257560586339, 38.10372825362463), (22.826788929142136, 37.16482263385777), (23.10295249458573, 34.771846982043876), (24.387651550868913, 33.2827564295772), (25.82936770950206, 33.16210202637511), (25.557501503948984, 36.39246631338593), (23.729020953235672, 40.1471703193656), (25.813562951888365, 35.561029988644336), (26.5173046073707, 35.18452932633369), (24.77859198674412, 34.15166673260206), (21.23487155577698, 36.5105588800243), (25.276930013476704, 35.131360854176535), (22.493387946548573, 36.78517041843648), (24.385289647525166, 37.335669057387726), (24.587154114074174, 35.61397200548726), (25.311244044578427, 34.117212558131975), (23.982852691650397, 36.01635437187656), (24.111063562798908, 31.418267572382227), (24.68867147060795, 35.363481550256644), (24.686621418656394, 33.104763826036056), (22.42591934771403, 34.789785253591695), (24.991105175469915, 34.10979431232785), (25.20630552859312, 36.558816149350534), (23.846379201803554, 36.1414458257896), (25.23472228644244, 32.641361593924174), (23.062887108583702, 35.04075442599907), (21.735098682375444, 36.51127780882874), (24.961373776424374, 33.9228476372155), (20.240420339246214, 33.87654102727224), (25.922634453956498, 35.2215760062586), (27.194383786280955, 36.267507265697255), (22.819091361866796, 34.25516433025548), (24.923378667802954, 34.463907946680294), (22.943474306364404, 37.07911595862419), (24.73645685241186, 35.33291181124776), (20.216002852334192, 33.41610156154373), (23.783158802270272, 36.043496466883504), (22.121125492746756, 34.690328304537594), (24.59096971887165, 33.61859674823029), (24.601954468608902, 32.78817486174627)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Task 3 - Shuffle the original data so that:\n",
     "# 100 are training data (50 Pikachu, 50 Pichu)\n",
@@ -442,31 +425,31 @@
     "    else:\n",
     "        new_pikachu_test_data.append(pikachu)\n",
     "\n",
-    "# Below I tested the code to make sure it works as intended. \n",
-    "# I've commented it out to make the code cleaner, but feel free to check it for yourself!\n",
+    "# # Below I tested the code to make sure it works as intended. \n",
+    "# # I've commented it out to make the code cleaner, but feel free to check it for yourself!\n",
     "\n",
-    "print(f'Number of Pichus in the new training set = {len(new_pichu_training_data)}')\n",
-    "print(f'Number of Pichus in the new test set = {len(new_pichu_test_data)}')\n",
+    "# print(f'Number of Pichus in the new training set = {len(new_pichu_training_data)}')\n",
+    "# print(f'Number of Pichus in the new test set = {len(new_pichu_test_data)}')\n",
     "\n",
-    "# Check if the total number of Pichus is 75 (To make sure all Pichus from the original dataset has been used)\n",
-    "if len(new_pichu_training_data) + len(new_pichu_test_data) == 75:\n",
-    "   print(\"All Pichus are included in the new datasets.\")\n",
+    "# # Check if the total number of Pichus is 75 (To make sure all Pichus from the original dataset has been used)\n",
+    "# if len(new_pichu_training_data) + len(new_pichu_test_data) == 75:\n",
+    "#    print(\"All Pichus are included in the new datasets.\")\n",
     "\n",
-    "print()\n",
+    "# print()\n",
     "\n",
-    "print(f'Number of Pikachus in the new training set = {len(new_pikachu_training_data)}')\n",
-    "print(f'Number of Pikachus in the new test set = {len(new_pikachu_test_data)}')\n",
+    "# print(f'Number of Pikachus in the new training set = {len(new_pikachu_training_data)}')\n",
+    "# print(f'Number of Pikachus in the new test set = {len(new_pikachu_test_data)}')\n",
     "\n",
-    "# Check if the total number of Pikachus is 75 (To make sure all Pikachus from the original dataset has been used)\n",
-    "if len(new_pikachu_training_data) + len(new_pikachu_test_data) == 75:\n",
-    "   print(\"All Pikachus are included in the new datasets.\")\n",
+    "# # Check if the total number of Pikachus is 75 (To make sure all Pikachus from the original dataset has been used)\n",
+    "# if len(new_pikachu_training_data) + len(new_pikachu_test_data) == 75:\n",
+    "#    print(\"All Pikachus are included in the new datasets.\")\n",
     "\n",
-    "print()\n",
+    "# print()\n",
     "\n",
-    "# Check if the randomizer works to add random Pichus & Pikachus to the new training & test data\n",
-    "# It works if the elements are different each time you run the program\n",
-    "print(new_pichu_training_data)\n",
-    "print(new_pikachu_training_data)\n"
+    "# # Check if the randomizer works to add random Pichus & Pikachus to the new training & test data\n",
+    "# # It works if the elements are different each time you run the program\n",
+    "# print(new_pichu_training_data)\n",
+    "# print(new_pikachu_training_data)"
    ]
   },
   {
@@ -592,7 +575,7 @@
     "- Result 9: Accuracy = 0.90\n",
     "- Result 10: Accuracy = 0.98\n",
     "\n",
-    "*Note:* Each result is an even number, which is quite curious. I don't know if this is a result of the data itself, error somewhere in the code, too small dataset, or just random chance. "
+    "*Note:* Each result is an even number, which is quite curious. I don't know if this is because of the data itself, an error somewhere in the code I can't find, too small dataset, or just random chance. "
    ]
   },
   {
