Labb 3 + exam practise

--- a/Labs/Labb_3_2023/Labb_3.ipynb
+++ b/Labs/Labb_3_2023/Labb_3.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task\n",
+    "## Task\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You are to create the following geometric classes:\n",
     "- Rectangle\n",
     "- Circle\n",
@@ -35,76 +41,6 @@
     "- Reflect on how various methods, properties change, e.g., area, circumference.\n",
     "- Unit test your classes.\n",
     "- Have a separate `.py` file for the unit tests."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The classes should have:\n",
-    "# - An `area` property.\n",
-    "# - A `circumference` property.\n",
-    "# - An operator overload of `==` for equality check.\n",
-    "# - An operator overload of comparison operators `<`,`>`,`<=`,`>=` for comparisons.\n",
-    "# - An override of `__repr__()`.\n",
-    "# - An override of `__str__()`.\n",
-    "# - `x` and `y` which represent the center position of the object.\n",
-    "# - A translation method that allows movement of `x` and `y`.\n",
-    "# - A method that checks if a certain point is inside the object.\n",
-    "# - Error handling.\n",
-    "# - A method that checks if the circle instance is a unit circle.\n",
-    "# - A method that checks if the rectangle instance is a square.\n",
-    "\n",
-    "from math import pi\n",
-    "\n",
-    "class Figures():\n",
-    "    def __init__(self, x, y):\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "\n",
-    "    def translation():\n",
-    "        pass\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        pass\n",
-    "\n",
-    "class Rectangle(Figures):\n",
-    "    def __init__(self, side1, side2):\n",
-    "        self.side1 = side1\n",
-    "        self.side2 = side2\n",
-    "    \n",
-    "    @property\n",
-    "    def area(self):\n",
-    "        return self.side1 * self.side2\n",
-    "\n",
-    "    @property\n",
-    "    def circumference(self):\n",
-    "        return (2 * self.x) + (2 * self.y)\n",
-    "    \n",
-    "    def is_square(self):\n",
-    "        if self.x == self.y:\n",
-    "            print(\"It's a square!\")\n",
-    "    \n",
-    "class Circle(Figures):\n",
-    "    def __init__(self, radius): \n",
-    "        self.radius = radius\n",
-    "        \n",
-    "    @property\n",
-    "    def area(self):\n",
-    "        return pi * self.radius * self.radius\n",
-    "\n",
-    "    @property\n",
-    "    def circumference(self):\n",
-    "        return 2 * pi * self.radius     \n",
-    "    \n",
-    "    def is_unit_circle(self):\n",
-    "        if self.radius == 1:\n",
-    "            print(\"It's the unit circle!\")"
    ]
   }
  ],
